Enhance reservation progress UI with stepper navigation and style updates
- Added a stepper navigation component in `index.html` to indicate reservation progress.
- Updated styles in `base.css` for the stepper, including responsive adjustments and improved visual design.
- Modified primary color variable for better contrast and updated various component styles for consistency.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
       </div>
     </header>
     <main class="gh-main" aria-labelledby="main-title">
+      <nav class="gh-stepper" aria-label="Reservation progress">
+        <ul>
+          <li class="gh-step gh-step-active" aria-current="step">Customer account</li>
+          <li class="gh-step">Attendees</li>
+          <li class="gh-step">Rep Attendees</li>
+          <li class="gh-step">Travel Info</li>
+          <li class="gh-step">Summary</li>
+        </ul>
+      </nav>
       <h2 class="gh-main-section-title">Start a new reservation or continue an existing one</h2>
       <p class="gh-main-desc">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc faucibus urna nibh, quis
