--- a/3.html
+++ b/3.html
@@ -15,27 +15,44 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles/base.css" />
   </head>
   <body>
     <header class="gh-header">
-      <div class="gh-header-left">
-        <img src="Greenheck_Logo_Horiz_Blue@2x.png" alt="Greenheck Logo" class="gh-logo" />
-      </div>
-      <div class="gh-header-right">
-        <span class="gh-header-title">Customer Visit Planner</span>
-        <div class="gh-user-info">
-          <span class="material-icons" aria-hidden="true">person_outline</span>
-          <span>Welcome, Gary</span>
+      <div class="gh-header-container">
+        <div class="gh-header-left">
+          <img
+            src="Greenheck_Logo_Horiz_Blue@2x.png"
+            alt="Greenheck Logo"
+            class="gh-logo"
+          />
+        </div>
+        <div class="gh-header-right">
+          <div class="gh-user-info">
+            <span class="material-icons" aria-hidden="true"
+              >person_outline</span
+            >
+            <span>Welcome, Gary</span>
+          </div>
+          <span class="gh-header-title">Customer Visit Planner</span>
         </div>
       </div>
     </header>
     <main class="gh-main gh-main-table">
       <section class="gh-section">
-        <h1 class="gh-main-section-title">Continue with existing customer visit</h1>
-        <p class="gh-main-desc">Modify a new visit and continue where you left off.</p>
-        <div class="gh-host-label"><strong>Customer Visit Host:</strong> Mike Lind</div>
+        <h1 class="gh-main-section-title">
+          Continue with existing customer visit
+        </h1>
+        <p class="gh-main-desc">
+          Modify a new visit and continue where you left off.
+        </p>
+        <div class="gh-host-label">
+          <strong>Customer Visit Host:</strong> Mike Lind
+        </div>
         <div class="gh-table-container">
           <table class="gh-table">
             <thead>
@@ -53,20 +70,28 @@
                 <td>Schofield, WI</td>
                 <td><strong>Monday Arrival; Wednesday Departure</strong></td>
                 <td>Scheduled</td>
-                <td><button class="gh-btn gh-btn-table gh-btn-edit">Continue / Edit</button></td>
+                <td>
+                  <button class="gh-btn gh-btn-table gh-btn-edit">
+                    Continue / Edit
+                  </button>
+                </td>
               </tr>
             </tbody>
           </table>
         </div>
         <div class="gh-cancel-info">
           Need to cancel a visit? Please contact
-          <a href="mailto:customervisit@greenheck.com">customervisit@greenheck.com</a>
+          <a href="mailto:customervisit@greenheck.com"
+            >customervisit@greenheck.com</a
+          >
         </div>
       </section>
       <div class="gh-or-divider"><span>– OR –</span></div>
       <section class="gh-section">
         <h2 class="gh-main-section-title">Select a New Customer Visit</h2>
-        <p class="gh-main-desc">Reserve a new group visit from the availability below.</p>
+        <p class="gh-main-desc">
+          Reserve a new group visit from the availability below.
+        </p>
         <div class="gh-table-container">
           <table class="gh-table">
             <thead>
@@ -90,36 +115,66 @@
                 <td><strong>07/21/2025</strong></td>
                 <td>Schofield, WI</td>
                 <td><strong>Monday Arrival; Wednesday Departure</strong></td>
-                <td class="gh-table-availability gh-available">1 groups available</td>
-                <td><button class="gh-btn gh-btn-table reserve-visit">Reserve</button></td>
+                <td class="gh-table-availability gh-available">
+                  1 groups available
+                </td>
+                <td>
+                  <button class="gh-btn gh-btn-table reserve-visit">
+                    Reserve
+                  </button>
+                </td>
               </tr>
               <tr>
                 <td><strong>07/23/2025</strong></td>
                 <td>Schofield, WI</td>
                 <td><strong>Wednesday Arrival; Friday Departure</strong></td>
-                <td class="gh-table-availability gh-available">1 group available</td>
-                <td><button class="gh-btn gh-btn-table reserve-visit">Reserve</button></td>
+                <td class="gh-table-availability gh-available">
+                  1 group available
+                </td>
+                <td>
+                  <button class="gh-btn gh-btn-table reserve-visit">
+                    Reserve
+                  </button>
+                </td>
               </tr>
               <tr>
                 <td><strong>07/28/2025</strong></td>
                 <td>Schofield, WI</td>
                 <td><strong>Monday Arrival; Wednesday Departure</strong></td>
-                <td class="gh-table-availability gh-available">2 groups available</td>
-                <td><button class="gh-btn gh-btn-table reserve-visit">Reserve</button></td>
+                <td class="gh-table-availability gh-available">
+                  2 groups available
+                </td>
+                <td>
+                  <button class="gh-btn gh-btn-table reserve-visit">
+                    Reserve
+                  </button>
+                </td>
               </tr>
               <tr>
                 <td><strong>08/04/2025</strong></td>
                 <td>Schofield, WI</td>
                 <td><strong>Monday Arrival; Wednesday Departure</strong></td>
-                <td class="gh-table-availability gh-available">2 groups available</td>
-                <td><button class="gh-btn gh-btn-table reserve-visit">Reserve</button></td>
+                <td class="gh-table-availability gh-available">
+                  2 groups available
+                </td>
+                <td>
+                  <button class="gh-btn gh-btn-table reserve-visit">
+                    Reserve
+                  </button>
+                </td>
               </tr>
               <tr>
                 <td><strong>08/27/2025</strong></td>
                 <td>Schofield, WI</td>
                 <td><strong>Wednesday Arrival; Friday Departure</strong></td>
-                <td class="gh-table-availability gh-available">3 groups available</td>
-                <td><button class="gh-btn gh-btn-table reserve-visit">Reserve</button></td>
+                <td class="gh-table-availability gh-available">
+                  3 groups available
+                </td>
+                <td>
+                  <button class="gh-btn gh-btn-table reserve-visit">
+                    Reserve
+                  </button>
+                </td>
               </tr>
             </tbody>
           </table>
@@ -135,8 +190,9 @@
         />
       </div>
       <div class="gh-footer-address">
-        &copy; <span id="year"></span> Greenheck Fan Corporation. All rights reserved. P.O. BOX 410
-        | Schofield, WI 54476 | <a href="tel:+17153596171">(715) 359-6171</a>
+        &copy; <span id="year"></span> Greenheck Fan Corporation. All rights
+        reserved. P.O. BOX 410 | Schofield, WI 54476 |
+        <a href="tel:+17153596171">(715) 359-6171</a>
       </div>
     </footer>
     <script src="scripts/main.js"></script>
