--- a/4.html
+++ b/4.html
@@ -15,25 +15,38 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles/base.css" />
   </head>
   <body>
     <header class="gh-header">
-      <div class="gh-header-left">
-        <img src="Greenheck_Logo_Horiz_Blue@2x.png" alt="Greenheck Logo" class="gh-logo" />
-      </div>
-      <div class="gh-header-right">
-        <span class="gh-header-title">Customer Visit Planner</span>
-        <div class="gh-user-info">
-          <span class="material-icons" aria-hidden="true">person_outline</span>
-          <span>Welcome, Gary</span>
+      <div class="gh-header-container">
+        <div class="gh-header-left">
+          <img
+            src="Greenheck_Logo_Horiz_Blue@2x.png"
+            alt="Greenheck Logo"
+            class="gh-logo"
+          />
+        </div>
+        <div class="gh-header-right">
+          <div class="gh-user-info">
+            <span class="material-icons" aria-hidden="true"
+              >person_outline</span
+            >
+            <span>Welcome, Gary</span>
+          </div>
+          <span class="gh-header-title">Customer Visit Planner</span>
         </div>
       </div>
     </header>
     <main class="gh-main gh-main-table">
       <h1 class="gh-main-section-title">Selected Visit</h1>
-      <p class="gh-main-desc">You may proceed to enter customer details or reserve and</p>
+      <p class="gh-main-desc">
+        You may proceed to enter customer details or reserve and
+      </p>
       <div class="gh-table-container">
         <table class="gh-table">
           <thead>
@@ -82,8 +95,9 @@
         />
       </div>
       <div class="gh-footer-address">
-        &copy; <span id="year"></span> Greenheck Fan Corporation. All rights reserved. P.O. BOX 410
-        | Schofield, WI 54476 | <a href="tel:+17153596171">(715) 359-6171</a>
+        &copy; <span id="year"></span> Greenheck Fan Corporation. All rights
+        reserved. P.O. BOX 410 | Schofield, WI 54476 |
+        <a href="tel:+17153596171">(715) 359-6171</a>
       </div>
     </footer>
     <script src="scripts/main.js"></script>
