--- a/6.html
+++ b/6.html
@@ -5,26 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Attendees | Greenheck Customer Visit Planner</title>
-    <meta name="description" content="Add attendees for your Greenheck customer visit." />
+    <meta
+      name="description"
+      content="Add attendees for your Greenheck customer visit."
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles/base.css" />
   </head>
   <body>
     <header class="gh-header">
-      <div class="gh-header-left">
-        <img src="Greenheck_Logo_Horiz_Blue@2x.png" alt="Greenheck Logo" class="gh-logo" />
-      </div>
-      <div class="gh-header-right">
-        <span class="gh-header-title">Customer Visit Planner</span>
-        <div class="gh-user-info">
-          <span class="material-icons" aria-hidden="true">person_outline</span>
-          <span>Welcome, Gary</span>
+      <div class="gh-header-container">
+        <div class="gh-header-left">
+          <img
+            src="Greenheck_Logo_Horiz_Blue@2x.png"
+            alt="Greenheck Logo"
+            class="gh-logo"
+          />
+        </div>
+        <div class="gh-header-right">
+          <div class="gh-user-info">
+            <span class="material-icons" aria-hidden="true"
+              >person_outline</span
+            >
+            <span>Welcome, Gary</span>
+          </div>
+          <span class="gh-header-title">Customer Visit Planner</span>
         </div>
       </div>
     </header>
@@ -43,7 +57,9 @@
         <h2 class="gh-form-title">Add Attendee(s)</h2>
         <div class="gh-attendee-from">
           Add attendee(s) from:
-          <span class="gh-attendee-company"><strong>TMS Johnson</strong> - Minneapolis, MN</span>
+          <span class="gh-attendee-company"
+            ><strong>TMS Johnson</strong> - Minneapolis, MN</span
+          >
         </div>
         <label class="gh-label">Select attendee name(s)</label>
         <div
@@ -54,7 +70,11 @@
           aria-expanded="false"
           data-multiselect="true"
         >
-          <button class="gh-select-trigger" aria-label="Select attendee name(s)" type="button">
+          <button
+            class="gh-select-trigger"
+            aria-label="Select attendee name(s)"
+            type="button"
+          >
             <span class="gh-select-value">Select attendee name(s)</span>
             <span class="material-icons">expand_more</span>
           </button>
@@ -88,12 +108,18 @@
         <div id="selected-attendees-list"></div>
         <div class="gh-add-not-on-list" aria-disabled="true">
           <span class="material-icons gh-add-icon" aria-hidden="true">add</span>
-          <span class="gh-add-not-on-list-label">Add an attendee not on the list</span>
+          <span class="gh-add-not-on-list-label"
+            >Add an attendee not on the list</span
+          >
         </div>
         <div class="gh-not-found-label">Need to add another account?</div>
         <div class="gh-create-account">
-          <span class="material-icons gh-create-icon" aria-hidden="true">person_add_alt</span>
-          <a href="#" id="add-another-account-link">Add another customer account</a>
+          <span class="material-icons gh-create-icon" aria-hidden="true"
+            >person_add_alt</span
+          >
+          <a href="#" id="add-another-account-link"
+            >Add another customer account</a
+          >
         </div>
         <div class="gh-back-link">
           <a href="#" id="back-link">&lt; Back</a>
@@ -120,8 +146,9 @@
         />
       </div>
       <div class="gh-footer-address">
-        &copy; <span id="year"></span> Greenheck Fan Corporation. All rights reserved. P.O. BOX 410
-        | Schofield, WI 54476 | <a href="tel:+17153596171">(715) 359-6171</a>
+        &copy; <span id="year"></span> Greenheck Fan Corporation. All rights
+        reserved. P.O. BOX 410 | Schofield, WI 54476 |
+        <a href="tel:+17153596171">(715) 359-6171</a>
       </div>
     </footer>
     <script src="scripts/main.js"></script>
