--- a/index.html
+++ b/index.html
@@ -15,54 +15,68 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles/base.css" />
   </head>
   <body>
     <header class="gh-header">
-      <div class="gh-header-left">
-        <img src="Greenheck_Logo_Horiz_Blue@2x.png" alt="Greenheck Logo" class="gh-logo" />
-      </div>
-      <div class="gh-header-right">
-        <div class="gh-user-info">
-          <span class="material-icons" aria-hidden="true">person_outline</span>
-          <span>Welcome, Gary</span>
+      <div class="gh-header-container">
+        <div class="gh-header-left">
+          <img
+            src="Greenheck_Logo_Horiz_Blue@2x.png"
+            alt="Greenheck Logo"
+            class="gh-logo"
+          />
         </div>
-        <span class="gh-header-title">Customer Visit Planner</span>
+        <div class="gh-header-right">
+          <div class="gh-user-info">
+            <span class="material-icons" aria-hidden="true"
+              >person_outline</span
+            >
+            <span>Welcome, Gary</span>
+          </div>
+          <span class="gh-header-title">Customer Visit Planner</span>
+        </div>
       </div>
     </header>
     <main class="gh-main" aria-labelledby="main-title">
-      <nav class="gh-stepper" aria-label="Reservation progress">
-        <ul>
-          <li class="gh-step gh-step-active" aria-current="step">Customer account</li>
-          <li class="gh-step">Attendees</li>
-          <li class="gh-step">Rep Attendees</li>
-          <li class="gh-step">Travel Info</li>
-          <li class="gh-step">Summary</li>
-        </ul>
-      </nav>
-      <h2 class="gh-main-section-title">Start a new reservation or continue an existing one</h2>
+      <h1 class="gh-main-section-title">
+        Start a new reservation or continue an existing one
+      </h1>
       <p class="gh-main-desc">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc faucibus urna nibh, quis
-        sollicitudin mi suscipit.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc faucibus
+        urna nibh, quis sollicitudin mi suscipit.
       </p>
       <section class="gh-cards">
-        <div class="gh-card gh-card-primary">
+        <div class="gh-card gh-card-secondary">
           <h3>Start a new reservation</h3>
           <p>Reserve a new visit and enter attendee information.</p>
-          <button class="gh-btn gh-btn-outline" id="start-reservation">Start a reservation</button>
+          <button
+            class="gh-btn gh-btn-outline absolute b-40"
+            id="start-reservation"
+          >
+            Start a reservation
+          </button>
         </div>
-        <div class="gh-card gh-card-secondary">
+        <div class="gh-card gh-card-primary">
           <h3>Continue with an existing reservation</h3>
           <p>Complete entering visitor information and continue planning</p>
-          <button class="gh-btn gh-btn-outline" id="continue-reservation">
+          <button
+            class="gh-btn gh-btn-outline absolute b-40"
+            id="continue-reservation"
+          >
             Continue reservation
           </button>
         </div>
       </section>
       <div class="gh-cancel-info">
         Need to cancel a visit? Please contact
-        <a href="mailto:customervisit@greenheck.com">customervisit@greenheck.com</a>
+        <a href="mailto:customervisit@greenheck.com"
+          >customervisit@greenheck.com</a
+        >
       </div>
     </main>
     <footer class="gh-footer">
@@ -74,8 +88,9 @@
         />
       </div>
       <div class="gh-footer-address">
-        &copy; <span id="year"></span> Greenheck Fan Corporation. All rights reserved. P.O. BOX 410
-        | Schofield, WI 54476 | <a href="tel:+17153596171">(715) 359-6171</a>
+        &copy; <span id="year"></span> Greenheck Fan Corporation. All rights
+        reserved. P.O. BOX 410 | Schofield, WI 54476 |
+        <a href="tel:+17153596171">(715) 359-6171</a>
       </div>
     </footer>
     <script src="scripts/main.js"></script>
