--- a/5.html
+++ b/5.html
@@ -102,8 +102,10 @@
           role="button"
           aria-expanded="false"
         >
-          <span class="material-icons gh-toggle-icon" aria-hidden="true"
-            >add</span
+          <span
+            class="material-icons gh-toggle-icon material-symbols-outlined"
+            aria-hidden="true"
+            >add_circle</span
           >
           <span class="gh-additional-info-label"
             >Additional account information</span
@@ -199,15 +201,19 @@
           >
           <a href="#" id="create-account-link">Create a customer account</a>
         </div>
+        <div class="gh-action-buttons">
+          <button class="gh-btn gh-btn-outline gh-btn-large" id="save-later">
+            Save &amp; Complete Later
+          </button>
+          <button
+            class="gh-btn gh-btn-table gh-btn-large"
+            id="save-add-attendee"
+          >
+            Save &amp; Add Attendee
+          </button>
+        </div>
       </section>
-      <div class="gh-action-buttons">
-        <button class="gh-btn gh-btn-outline gh-btn-large" id="save-later">
-          Save &amp; Complete Later
-        </button>
-        <button class="gh-btn gh-btn-table gh-btn-large" id="save-add-attendee">
-          Save &amp; Add Attendee
-        </button>
-      </div>
+
       <div class="gh-back-link">
         <a href="#" id="back-link">&lt; Back</a>
       </div>
