--- a/6.html
+++ b/6.html
@@ -107,7 +107,9 @@
         </div>
         <div id="selected-attendees-list"></div>
         <div class="gh-add-not-on-list" aria-disabled="true">
-          <span class="material-icons gh-add-icon" aria-hidden="true">add</span>
+          <span class="material-icons gh-add-icon" aria-hidden="true"
+            >add_circle</span
+          >
           <span class="gh-add-not-on-list-label"
             >Add an attendee not on the list</span
           >
