Add Material Symbols Outlined font and update styles
- Included Material Symbols Outlined font in `2.html` and `4.html`.
- Updated icon class from `material-icons` to `material-symbols-outlined` for consistency.
- Added new font styles for Roboto weights in `base.css`.
- Adjusted margins and font sizes for better layout and readability.

--- a/2.html
+++ b/2.html
@@ -21,6 +21,11 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+
     <link rel="stylesheet" href="styles/base.css" />
   </head>
   <body>
@@ -59,9 +64,9 @@
               <th>
                 Group Availability
                 <span
-                  class="material-icons gh-info-icon"
+                  class="material-symbols-outlined text-14"
                   title="Number of groups that can be accommodated"
-                  >info</span
+                  >help</span
                 >
               </th>
               <th></th>
