Refactor back link and additional info toggle across multiple HTML files
- Updated back link in `4.html`, `5.html`, `6.html`, `7.html`, and `8.html` to include an icon for better UX.
- Enhanced the additional account info toggle functionality in `main.js` for improved accessibility and usability.
- Introduced new font styles for Helvetica in `base.css` to standardize typography across components.
- Adjusted various CSS properties for better alignment and spacing in form elements.

--- a/4.html
+++ b/4.html
@@ -88,7 +88,9 @@
       </div>
 
       <div class="gh-back-link">
-        <a href="#" id="back-link">&lt; Back</a>
+        <a href="#" id="back-link"
+          ><span class="material-icons">keyboard_arrow_left</span>Back</a
+        >
       </div>
     </main>
     <footer class="gh-footer">
