--- a/5.html
+++ b/5.html
@@ -103,9 +103,9 @@
           aria-expanded="false"
         >
           <span
-            class="material-icons gh-toggle-icon material-symbols-outlined"
+            class="material-icons gh-add-icon gh-toggle-icon"
             aria-hidden="true"
-            >add_circle</span
+            >add_circle_outline</span
           >
           <span class="gh-additional-info-label"
             >Additional account information</span
@@ -220,7 +220,9 @@
       </section>
 
       <div class="gh-back-link">
-        <a href="#" id="back-link">&lt; Back</a>
+        <a href="#" id="back-link"
+          ><span class="material-icons">keyboard_arrow_left</span>Back</a
+        >
       </div>
     </main>
     <footer class="gh-footer">
