--- a/6.html
+++ b/6.html
@@ -55,13 +55,12 @@
       </nav>
       <section class="gh-form-section">
         <h2 class="gh-form-title">Add Attendee(s)</h2>
-        <div class="gh-attendee-from">
-          Add attendee(s) from:
-          <span class="gh-attendee-company"
-            ><strong>TMS Johnson</strong> - Minneapolis, MN</span
-          >
+        <div class="gh-attendee-from">Add attendee(s) from:</div>
+        <div class="gh-attendee-company">
+          <span class="gh-attendee-company-name">TMS Johnson</span> -
+          Minneapolis, MN
         </div>
-        <label class="gh-label">Select attendee name(s)</label>
+
         <div
           class="gh-custom-select"
           id="attendee-names-select"
@@ -106,25 +105,115 @@
           </ul>
         </div>
         <div id="selected-attendees-list"></div>
-        <div class="gh-add-not-on-list" aria-disabled="true">
-          <span class="material-icons gh-add-icon" aria-hidden="true"
-            >add_circle</span
+
+        <div
+          class="gh-additional-info-collapsed"
+          id="additional-info-toggle"
+          tabindex="0"
+          role="button"
+          aria-expanded="false"
+        >
+          <span
+            class="material-icons gh-add-icon gh-toggle-icon"
+            aria-hidden="true"
+            >add_circle_outline</span
           >
-          <span class="gh-add-not-on-list-label"
-            >Add an attendee not on the list</span
+          <span class="gh-additional-info-label"
+            >Additional account information</span
           >
         </div>
-        <div class="gh-not-found-label">Need to add another account?</div>
-        <div class="gh-create-account">
-          <span class="material-icons gh-create-icon" aria-hidden="true"
-            >person_add_alt</span
-          >
-          <a href="#" id="add-another-account-link"
-            >Add another customer account</a
-          >
+        <div
+          class="gh-additional-info-fields"
+          id="additional-info-fields"
+          hidden
+        >
+          <div class="gh-additional-info-fields-container">
+            <div class="gh-label-input-group">
+              <label for="year-established" class="gh-label"
+                >Year Established</label
+              >
+              <input
+                type="text"
+                id="year-established"
+                class="gh-input"
+                placeholder=""
+              />
+            </div>
+            <div class="gh-label-input-group">
+              <label for="additional-locations" class="gh-label"
+                >Additional Location(s)</label
+              >
+              <textarea
+                id="additional-locations"
+                class="gh-textarea"
+                placeholder="City and State..."
+              ></textarea>
+            </div>
+            <div class="gh-label-input-group">
+              <label for="project-focus" class="gh-label"
+                >Company or project focus
+                <span id="focus-count" class="gh-char-count">0/250</span></label
+              >
+              <textarea
+                id="project-focus"
+                class="gh-textarea"
+                maxlength="250"
+                placeholder="Type here..."
+              ></textarea>
+            </div>
+            <div class="gh-label-input-group">
+              <label class="gh-label">Select areas of interest</label>
+              <div
+                class="gh-custom-select"
+                id="areas-interest-select"
+                tabindex="0"
+                aria-haspopup="listbox"
+                aria-expanded="false"
+              >
+                <button
+                  class="gh-select-trigger"
+                  aria-label="Select areas of interest"
+                  type="button"
+                >
+                  <span class="gh-select-value">Select</span>
+                  <span class="material-icons">expand_more</span>
+                </button>
+                <ul class="gh-select-options" role="listbox" hidden>
+                  <li class="gh-select-option" role="option" data-value="hvac">
+                    <span class="gh-option-bold">HVAC</span>
+                  </li>
+                  <li
+                    class="gh-select-option"
+                    role="option"
+                    data-value="plumbing"
+                  >
+                    <span class="gh-option-bold">Plumbing</span>
+                  </li>
+                  <li
+                    class="gh-select-option"
+                    role="option"
+                    data-value="electrical"
+                  >
+                    <span class="gh-option-bold">Electrical</span>
+                  </li>
+                  <li
+                    class="gh-select-option"
+                    role="option"
+                    data-value="controls"
+                  >
+                    <span class="gh-option-bold">Controls</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="gh-back-link">
-          <a href="#" id="back-link">&lt; Back</a>
+        <div class="gh-need-account">
+          <p>Need to add another account?</p>
+          <a href="#">
+            <span class="material-icons">keyboard_arrow_left</span>
+            Back
+          </a>
         </div>
       </section>
       <div class="gh-action-buttons">
@@ -136,7 +225,9 @@
         </button>
       </div>
       <div class="gh-back-link">
-        <a href="#" id="back-link-bottom">&lt; Back</a>
+        <a href="#"
+          ><span class="material-icons">keyboard_arrow_left</span>Back</a
+        >
       </div>
     </main>
     <footer class="gh-footer">
