--- a/7.html
+++ b/7.html
@@ -131,8 +131,10 @@
           Save &amp; Add Travel Info
         </button>
       </div>
-      <div class="gh-back-link" style="text-align: center; margin-top: 2rem">
-        <a href="#" id="back-link">&lt; Back</a>
+      <div class="gh-back-link">
+        <a href="#" id="back-link"
+          ><span class="material-icons">keyboard_arrow_left</span>Back</a
+        >
       </div>
     </main>
     <footer class="gh-footer">
